<resources>
    <string name="app_name">PixApp</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="uploaded_by">Uploaded By:</string>
    <string name="log_out">Log Out</string>
</resources>
