<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.RegisterActivity">

    <data>
        <variable
            name="viewModel"
            type="com.android.pixapp.viewmodels.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:text="@={viewModel.mEmailLiveData}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:text="@={viewModel.mPasswordLiveData}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:text="@={viewModel.mConfirmPasswordLiveData}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:layout_marginTop="20dp"
            android:hint="@string/age"
            android:text="@={viewModel.mAgeLiveData}"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            android:text="@string/Register" />

    </LinearLayout>

</layout>