<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity">

    <data>
        <variable
            name="viewModel"
            type="com.android.pixapp.viewmodels.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.mEmailLiveData}"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="@={viewModel.mPasswordLiveData}"
            tools:ignore="Autofill" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:text="@string/Register" />

            <Button
                android:id="@+id/loginButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:text="@string/login" />

        </LinearLayout>

    </LinearLayout>

</layout>